--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <link rel="icon" href="/logo.jpg" type="image/jpeg" />
   <link rel="apple-touch-icon" href="/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Shopping Cart - Premium Home Decor, Wallets & Accessories Online in Pakistan</title>
+  <title>HayaFit Intima - Premium Women's Lingerie & Intimate Wear Online in Pakistan</title>
   <meta name="description"
-    content="Shop premium home decor, wallets, furniture, accessories & garden decorations online in Pakistan. Fast delivery, quality products at TheShoppingCart.shop" />
+    content="Shop premium lingerie, bras, panties, nightwear & intimate accessories online in Pakistan. Quality women's intimate wear with discreet delivery at hayafitintima.store" />
   <meta name="keywords"
-    content="home decor, wallets, furniture, accessories, garden decorations, shopping cart, the shopping cart, theshoppingcart.shop, buy online in Pakistan, premium decor items" />
-  <meta name="author" content="The Shopping Cart" />
-  <link rel="canonical" href="https://theshoppingcart.shop" />
+    content="lingerie Pakistan, intimate wear, bras online, nightwear, women accessories, hayafit intima, hayafitintima.store, buy lingerie online Pakistan, premium intimate wear, women wellness products" />
+  <meta name="author" content="HayaFit Intima" />
+  <link rel="canonical" href="https://hayafitintima.store" />
 
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="ejgVrfHXye3Knubm7UK2YnN2NgK1MrK-Zrzjghd7tbA" />
@@ -32,9 +32,9 @@
     gtag('config', 'G-L9S3YSDJER');
   </script>
 
-  <meta property="og:title" content="The Shopping Cart - Premium Lifestyle Products" />
+  <meta property="og:title" content="HayaFit Intima - Premium Women's Intimate Wear" />
   <meta property="og:description"
-    content="Discover premium home décor and luxury leather accessories. Elegant designs for sophisticated living." />
+    content="Discover premium lingerie, bras, and intimate wear. Elegant designs for confident, comfortable women." />
   <meta property="og:type" content="website" />
 
   <!-- Meta Pixel Code -->
