--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         var r = "https://analytics.tiktok.com/i18n/pixel/events.js", o = n && n.partner; ttq._i = ttq._i || {}, ttq._i[e] = [], ttq._i[e]._u = r, ttq._t = ttq._t || {}, ttq._t[e] = +new Date, ttq._o = ttq._o || {}, ttq._o[e] = n || {}; n = document.createElement("script")
           ; n.type = "text/javascript", n.async = !0, n.src = r + "?sdkid=" + e + "&lib=" + t; e = document.getElementsByTagName("script")[0]; e.parentNode.insertBefore(n, e)
       };
-      ttq.load('D3J6DIRC77U8DNMA4HIG');
+      ttq.load('D4LV8IRC77UEBGID3JLG');
     }(window, document, 'ttq');
   </script>
   <!-- TikTok Pixel Code End -->
