updated snapchat pixel events

--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
   </script>
   <!-- TikTok Pixel Code End -->
 
+  <!-- Snap Pixel Code -->
+  <script type='text/javascript'>
+    (function (e, t, n) {
+      if (e.snaptr) return; var a = e.snaptr = function () {
+        a.handleRequest ? a.handleRequest.apply(a, arguments) : a.queue.push(arguments)
+      };
+      a.queue = []; var s = 'script'; r = t.createElement(s); r.async = !0;
+      r.src = n; var u = t.getElementsByTagName(s)[0];
+      u.parentNode.insertBefore(r, u);
+    })(window, document,
+      'https://sc-static.net/scevent.min.js');
+
+    snaptr('init', '005b9f3c-e4d3-4c05-ae85-1f24c877e31a');
+    snaptr('track', 'PAGE_VIEW');
+  </script>
+  <!-- End Snap Pixel Code -->
+
   <!-- Google Analytics - Placeholder -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script> -->
 </head>
